--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,10 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="8dp">
-    <TextView android:id="@+id/tvUserName" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-    <TextView android:id="@+id/tvUserEmail" android:layout_width="match_parent" android:layout_height="wrap_content"/>
-    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
-        <Button android:id="@+id/btnChangeRole" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Cambiar rol"/>
-        <Button android:id="@+id/btnDeleteUser" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Eliminar"/>
-    </LinearLayout>
+    android:orientation="vertical"
+    android:padding="12dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:elevation="2dp"
+    android:layout_marginBottom="8dp">
+
+    <TextView
+        android:id="@+id/tvUserId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID: 1"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/tvUserName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nombre"/>
+
+    <TextView
+        android:id="@+id/tvUserEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="email@dominio.com"/>
+
+    <TextView
+        android:id="@+id/tvUserActive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Activo"/>
 </LinearLayout>
