--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
     <color name="primary">#0D47A1</color>
     <color name="primary_dark">#093170</color>
     <color name="bg">#FAFAFA</color>
+    <color name="gray">#8A8A8A</color>
 </resources>
