--- a/app/src/main/res/layout/item_subject.xml
+++ b/app/src/main/res/layout/item_subject.xml
@@ -44,10 +44,10 @@
         android:layout_marginStart="8dp">
 
         <Button
-            android:id="@+id/btnEdit"
+            android:id="@+id/btnManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Editar"/>
+            android:text="Gestionar"/>
 
         <Button
             android:id="@+id/btnEvaluations"
